# Electron-Trajectory-v2

./: .gitignore  README.md  config.py  eqations.py  field_EXL.py  hyp2f.py  logger_config.py  main.py  parameters.py  physical_constants.py  plotting.py  poincare.py  poincare_plotting.py  pyproject.toml  solver.py
discharges/: base_shot.toml  shot_1.toml  test_shot.toml
original_version/: el_traj_DOP853_11_eqations.py  field_EXL_50U_13976.py
