[project]
name = "electron-trajectory-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "line-profiler>=5.0.2",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "numba>=0.65.0",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "psutil>=7.2.2",
    "scipy>=1.17.1",
    "snakeviz>=2.2.2",
    "tables>=3.11.1",
]
